<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.elkana911.top.MainActivity">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_signin"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="102"
        android:title="@string/action_calendar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_editProfile"
        android:orderInCategory="103"
        android:title="@string/action_edit_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="104"
        android:title="@string/action_signout"
        app:showAsAction="ifRoom" />
</menu>
