<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    >

    <LinearLayout
        android:id="@+id/llBlank"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivNoOrder"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:tint="#f7ffffff"
            app:srcCompat="@drawable/ic_lightbulb_outline_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/message_blank_order_detail" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/llNonBlank"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <AutoCompleteTextView
                    android:id="@+id/etStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvStatusDetil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/TextAppearanceSummaryOrderHello"
                android:text="Informasi Status" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCheckTechnicianGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_check_technician_gps"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_payment"
                    android:visibility="gone" />

            </LinearLayout>

            <include android:id="@+id/cardReview" android:visibility="gone" layout="@layout/layout_rating"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/message_your_order"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvServiceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearanceSummaryOrder"
                android:text="Jenis Layanan :" />

            <TextView
                android:id="@+id/tvDateRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearanceSummaryOrder"
                android:text="Tanggal : 22 Oktober 2017" />

            <TextView
                android:id="@+id/tvDateService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearanceSummaryOrder"
                android:text="Tanggal : 22 Oktober 2017" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearanceSummaryOrder"
                android:text="Alamat" />

            <TextView
                android:id="@+id/tvProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearanceSummaryOrder"
                android:text="Problem :" />

            <TextView
                android:id="@+id/tvMitra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearanceSummaryOrder"
                android:text="Mitra :" />

            <TextView
                android:id="@+id/tvTechnician"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearanceSummaryOrder"
                android:text="Teknisi :" />

            <Button
                android:id="@+id/btnCallMitra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/action_call_vendor" />

            <include android:id="@+id/cardInvoice" android:visibility="gone" layout="@layout/layout_invoice"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCancelOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_service"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnReschedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ganti Jadwal Layanan"
                    android:visibility="invisible" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>


